# pricebook

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  AUDIT_L0_CORE.md  AUDIT_L1_CURVES.md  DESIGN.md  GUIDE.md  LICENSE  MODULE_HEALTH.md  README.md  REFERENCES.md  RELEASE_NOTES.md  tlock_pricing_example.ipynb
python/: README.md  pyproject.toml  requirements.txt
python/notebooks/: brazilian_credit_derivatives.ipynb  paper_01_multicurve.ipynb  paper_02_discounting.ipynb  paper_03_tlock_model.ipynb  paper_04_cln.ipynb  paper_05_cdsmm.ipynb  paper_06_burgess_trs.ipynb  paper_07_lou_trs.ipynb  paper_08_cmasw.ipynb  paper_09_hybrid.ipynb  paper_10_cmt.ipynb  paper_11_pucci_tlock.ipynb  paper_12_zhou_cds.ipynb
python/notebooks/credit/: _build_hazard_notebook.py  hazard_from_bonds_when_maturities_are_close.ipynb  recovery_roundtrip.ipynb
python/notebooks/desks/: bond_trading_desk.ipynb  futures_desk.ipynb
python/notebooks/examples/: _build_quickstart.py  api_trader_workflow.py  basket_cln_30names.py  leveraged_cln_cds.py  quickstart.ipynb  viz_quickstart.py
python/notebooks/markets/: canada.ipynb  chile.ipynb  peru.ipynb
python/notebooks/papers/: paper_02_discounting.ipynb  paper_04_cln.ipynb  paper_05_cdsmm.ipynb  paper_06_burgess_trs.ipynb  paper_12_zhou_cds.ipynb
python/notebooks/projects/: euribor_explorer.ipynb
python/notebooks/rates/: asw_btp_bund.ipynb  treasury_note_roundtrip.ipynb
python/notebooks/structured/: tarf_risk_profile.ipynb
python/pricebook/: __init__.py  aad.py  aad_calibration.py  aad_curves.py  aad_interp.py  aad_pricing.py  adi.py  american_option.py  amortising_bond.py  amortising_swap.py  api.py  api_desk.py  approximation.py  asian.py  asian_option.py  asset_swap_desk.py  autocallable.py  backtest.py  barrier_option.py  basis_swap.py  basis_trade.py  basket_cds.py  basket_option.py  benchmark_bonds.py  bermudan_lmm.py  bermudan_swaption.py  binomial_jr_lr.py  binomial_tree.py  black76.py  bloomberg_adapter.py  bond.py  bond_basis_trading.py  bond_daily_pnl.py  bond_desk.py  bond_forward.py  bond_futures.py  bond_futures_options.py  bond_rv.py  bond_trading_desk.py  bond_trs.py  (+361 more)
python/pricebook/calibration/: ARCHITECTURE.md  __init__.py  (+4 more)
python/scripts/: euribor_daily.py
python/tests/: conftest.py  test_aad.py  test_aad_calibration.py  test_aad_curves.py  test_aad_e2e.py  test_aad_interp.py  test_aad_swaption.py  test_adi.py  test_akima.py  test_american_analytical.py  test_american_dividend.py  test_american_multi_asset.py  test_americas.py  test_amortising_bond.py  test_amortising_swap.py  test_api.py  test_api_desk.py  test_apix.py  test_approximation.py  test_approximation_properties.py  test_approximation_structure.py  test_architecture.py  test_asia.py  test_asian.py  test_asian_option.py  test_asset_swap_desk.py  test_asw_deep.py  test_aus_zar_ils.py  test_backlog_close.py  test_backtest.py  test_barrier.py  test_barrier_bridge.py  test_barrier_option.py  test_base_corr_interp.py  test_basis_swap.py  test_basis_trade.py  test_basket_cds.py  test_basket_cln_deep.py  test_basket_heterogeneous.py  test_basket_multicopula.py  (+846 more)
(+892 files in other folders)
