[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pricebook"
dynamic = ["version"]
description = "Quantitative finance library for derivatives pricing and risk analytics"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "Bernardo Cohen", email = "devcodingwork@gmail.com"},
]
keywords = [
    "finance", "derivatives", "pricing", "risk", "quant",
    "bonds", "swaps", "options", "cds",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
pandas = ["pandas>=1.3.0"]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.dynamic]
version = {attr = "pricebook.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["pricebook*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short"]
