[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pricebook"
dynamic = ["version"]
description = "Quantitative finance library for derivatives pricing and risk analytics"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Bernardo Cohen", email = "devcodingwork@gmail.com"},
]
keywords = [
    "finance", "derivatives", "pricing", "risk", "quant",
    "bonds", "swaps", "options", "cds", "credit",
    "fixed-income", "fx", "commodities", "structured-products",
    "monte-carlo", "pde", "lattice", "portfolio-optimization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
viz = ["plotly", "matplotlib", "seaborn"]
codec = ["zstandard", "lz4", "msgpack"]
docs = ["sphinx", "myst-parser", "sphinx-book-theme"]
dev = [
    "pytest", "pytest-cov", "pytest-xdist",
    "plotly", "matplotlib", "seaborn",
    "zstandard", "lz4", "msgpack",
    "sphinx", "myst-parser", "sphinx-book-theme",
]

[tool.setuptools.dynamic]
version = {attr = "pricebook.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["pricebook*"]
exclude = ["tests*", "notebooks*"]

[tool.setuptools.package-data]
pricebook = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
